# end-2-end-data-pipeline

./: .gitignore  .pre-commit-config.yml  DataInputer.py  IMPLEMENTATION_GUIDE.md  README.md  SourceValidator.py  Untitled.ipynb  key_manager.py  pyproject.toml  setup_project.sh
backend/: .env  .env.example  README.md  alembic.ini  key_gen.py  pyproject.toml  requirements.txt  run.py  wsgi.py  ydata_profiling_report.html
backend/api/: __init__.py  app.py  main.py
backend/api/app/: __init__.py
backend/api/app/auth/: security.py
backend/api/app/middleware/: auth_middleware.py  cors_middleware.py  logging.py
backend/api/app/schemas/: auth.py  decisions.py  monitoring.py  reports.py  settings.py  validators.py
backend/api/app/utils/: route_registry.py
backend/api/fastapi_app/: main.py
backend/api/fastapi_app/auth/: dependencies.py  jwt_manager.py
backend/api/fastapi_app/dependencies/: services.py
backend/api/fastapi_app/middleware/: __init__.py  auth_middleware.py  base.py  cors_middleware.py  error_handler.py  logging.py
backend/api/fastapi_app/openapi/: documentation.py
backend/api/fastapi_app/routers/: __init__.py  analytics.py  auth.py  data_sources.py  decisions.py  insight.py  monitoring.py  pipeline.py  quality.py  recommendations.py  reports.py  staging.py
backend/api/fastapi_app/schemas/: auth.py  base.py  data_source.py  data_sources.py  staging.py
backend/api/fastapi_app/utils/: auth_utils.py  error_handlers.py  response_builder.py  route_registry.py
backend/api/flask_app/auth/: jwt_manager.py  security.py
backend/api/flask_app/blueprints/: __init__.py
backend/api/flask_app/middleware/: auth_middleware.py  cors_middleware.py  error_handler.py  logging.py
backend/api/flask_app/openapi/: documentation.py
backend/api/flask_app/utils/: error_handlers.py  response_builder.py  route_registry.py
backend/api/services/: pipeline_service.py
backend/backend/: test_db_connection.py  test_db_setup.py
backend/backend/config/: __init__.py  database.py
backend/backend/core/app/: factory.py
backend/backend/core/channel_handlers/: advanced_analytics_handler.py  base_channel_handler.py  core_process_handler.py  data_source_handler.py  decision_handler.py  insight_handler.py  processing_handler.py  quality_handler.py  recommendation_handler.py  routing_handler.py  staging_handler.py
backend/backend/core/config/: config.yaml  config_manager.py  data_processing_enums.py
backend/backend/core/control/: control_point_manager.py
backend/backend/core/messaging/: broker.py  types.py
backend/backend/core/metrics/: metrics_manager.py
backend/backend/core/monitoring/: collectors.py
backend/backend/core/orchestration/: advanced_analytics_manager.py  analytics_manager.py  base_manager.py  conductor.py  data_conductor.py  decision_manager.py  insight_manager.py  orchestrator.py  pipeline_manager.py  pipeline_manager_helper.py  quality_manager.py  recommendation_manager.py  report_manager.py  route_manager.py  routing_manager.py  staging_manager.py
backend/backend/core/output/: handlers.py
backend/backend/core/registry/: component_registry.py
backend/backend/core/staging/: staging_area.py
backend/backend/core/utils/: process_manager.py  rate_limiter.py
backend/backend/data_pipeline/: pipeline_service.py
backend/backend/data_pipeline/advanced_analytics/: analytics_processor.py
backend/backend/data_pipeline/analysis/: data_quality_report.py  insight_report.py  profile_report.html  quality_report.py  quality_report_generator.py  (+1 more)
backend/backend/database/: config.py
backend/backend/flask_api/: app.py  bp_routes.py  config.py  main.py
backend/config/: __init__.py  app_config.py  celery_config.py  config.yaml  config_manager.py  database.py  validation_config.py
backend/core/: encryption.py
backend/core/control/: cpm.py
backend/core/handlers/: __init__.py  core_process_handler.py  reports_handler.py
backend/core/managers/: __init__.py  advanced_analytics_manager.py  decision_manager.py  insight_manager.py  monitoring_manager.py  pipeline_manager.py  quality_manager.py  recommendation_manager.py  report_manager.py  staging_manager.py
backend/core/messaging/: broker.py  event_types.py  message_types.py
backend/core/monitoring/: collectors.py
backend/core/registry/: component_registry.py  route_registry.py
backend/core/services/: __init__.py
backend/core/staging/: staging_manager.py
backend/data/processing/: base_processor.py
backend/data/source/: __init__.py
backend/db/: __init__.py
backend/db/migrations/: env.py  manage.py
backend/db/models/: __init__.py  advanced_analytics_model.py  associations.py  auth.py  base.py  circular_dependencies.py  data_quality_model.py  data_source.py  dataset.py  decision.py  events.py  insight_model.py  monitoring.py  pipeline.py  recommendation.py  report_model.py  settings.py  staging_model.py  utils.py  validation.py
backend/db/repository/: advanced_analytics_repository.py  auth.py  base.py  base_repository.py  data.py  decision_repository.py  insight_repository.py  pipeline_repository.py  quality_repository.py  recommendation_repository.py  reports_repository.py  staging.py  staging_repository.py
backend/docs/: api_docs.md  architecture.md  create_data_pipeline_structure.py  create_file_tree_architecture.py  enhanced-data-flow-sequence.mermaid  system-analysis.md
backend/infrastructure/celery/: __init__.py  celery.py  config.py  tasks.py
backend/infrastructure/docker/: Dockerfile
backend/infrastructure/prometheus/: config.yml
backend/staged_data/: 1741882150.950671_file
backend/tests/: test_db_connection.py  test_db_setup.py
backend/tests/unit/: test_alert_manager.py  test_health_checker.py  test_metrics_collector.py  test_monitoring_manager.py  test_performance_tracker.py  test_recommendation_manager.py  test_report_manager.py  test_resource_monitor.py  test_staging_manager.py
backend/utils/: exceptions.py  formatters.py  rate_limiter.py  validators.py  websocket_manager.py
backend/utils/scripts/: setup_framework.py  setup_project.sh
frontend/: README.md  (+5 more)
(+1514 files in other folders)
