# pyproject.toml
[tool.poetry]
name = "end-2-end-data-pipeline"
version = "0.1.0"
description = "End-to-end data ingestion pipeline with Flask and React"
authors = ["Igwe Chibueze <scientistigwe@gmail.com>"]
readme = "README.md"

# Define the package location explicitly
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
flask-cors = "^4.0.0"
pandas = "^2.1.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
requests = "^2.32.3"
pytest = "7.4.0"
requests-mock = "^1.12.1"
pyarrow = "^18.0.0"
pymongo = "^4.10.1"
pymysql = "^1.1.1"
boto3 = "^1.35.59"
cryptography = "^43.0.3"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
confluent-kafka = "^2.6.0"
docutils = "^0.21.2"
botocore = "^1.35.60"
ntplib = "^0.4.0"
sqlparse = "^0.5.2"
pycryptodome = "^3.21.0"
crypto = "^1.4.1"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuration for development tools
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=flask_app"