# backend/pyproject.toml

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "End-to-end data ingestion pipeline with Flask"
authors = ["Igwe Chibueze <scientistigwe@gmail.com>"]
readme = "README.md"
packages = [
    { include = "backend" }
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
flask = "^3.0.0"
flask-cors = "^4.0.0"
pandas = "^2.1.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
requests = "^2.32.3"
pytest = "7.4.0"
requests-mock = "^1.12.1"
pyarrow = "^18.0.0"
pymongo = "^4.10.1"
pymysql = "^1.1.1"
boto3 = "^1.35.59"
cryptography = "^43.0.3"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
confluent-kafka = "^2.6.0"
docutils = "^0.21.2"
botocore = "^1.35.60"
ntplib = "^0.4.0"
sqlparse = "^0.5.2"
pycryptodome = "^3.21.0"
crypto = "^1.4.1"
openpyxl = "^3.1.5"
psutil = "^6.1.0"
loguru = "^0.7.2"
pydantic = "^2.9.2"
kafka = "^1.3.5"
fastparquet = "^2024.11.0"
python-magic = "^0.4.27"
kafka-python = "^2.0.2"
ydata-profiling = "^4.12.0"
pyspellchecker = "^0.7.2"
geopy = "^2.4.1"
chardet = "^5.2.0"
jellyfish = "^1.1.0"
phonenumbers = "^8.13.50"
textstat = "^0.7.4"
email-validator = "^2.2.0"
workalendar = "^17.0.0"
sentence-transformers = "^3.3.1"
mmh3 = "^5.0.1"
datasketch = "^1.6.5"
pybloom-live = "^4.0.0"
tqdm = "^4.67.1"
colorama = "^0.4.6"
tabulate = "^0.9.0"
memory-profiler = "^0.61.0"
humanize = "^4.11.0"
flask-jwt-extended = "^4.7.1"
python-jose = "^3.3.0"
apispec = "^6.7.1"
flask-apispec = "^0.11.4"
marshmallow = "^3.23.1"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuration for development tools
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=flask_app"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"